[package]
name = "duolingo-query"
authors = ["mist64_"]
version = "0.1.1"
description = "A teeny tiny unofficial library for getting user information on duolingo"
repository = "https://github.com/misten1/duolingo-query"
license = "MIT"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["macros"]}
anyhow = "1.0.86"